--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,126 @@
-.App {
-  text-align: center;
+.navBar {
+  display: flex;
+  flex-direction: row;
+  background-color: rgb(9, 9, 37);
+  border-bottom-style: solid;
+  border-bottom-width: 2px;
+  border-bottom-color: rgb(138, 17, 92);
+  align-items: center;
+  min-height: 40px;
+  padding-left: 25px;
+  font-size: large;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  background-color: rgb(9, 9, 37);
 }
+
+.votes-items {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-left: 20px;
+  color: rgb(240, 186, 219);
+}
+
+.votes-num {
+  background-color: rgb(9, 9, 37);
+  color: rgb(240, 186, 219);
+  border-radius: 5px;
+  text-align: center;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-left: 10px;
+  padding-right: 10px;
+  margin-left: 5px;
+}
+
+.all-finalists {
+  display: flex;
+  margin: 50px;
+  align-items: center;
+  align-self: center;
+  align-content: center;
+}
+
+.card {
+  border-style: solid;
+  border-width: 2px;
+  border-top-right-radius: 50%;
+  border-top-left-radius: 50%;
+
+  max-width: 500px;
+  background-color: rgb(189, 52, 136);
+
+}
+
+.card-img-top {
+  border-top-right-radius: 50%;
+  border-top-left-radius: 50%;
+  width: 400px;
+  height: 400px;
+}
+
+.card-body {
+  border-top-left-radius: 50%;
+  border-top-right-radius: 50%;
+  margin: 10px;
+  align-self: center;
+  align-content: center;
+  text-align: center;
+  align-items: center;
+
+}
+
+.btn {
+  background-color: rgb(240, 186, 219);
+  color: rgb(189, 52, 136);
+  padding-top: 10px;
+  padding-bottom: 5px;
+  padding-left: 10px;
+  padding-right: 10px;
+  margin-left: 185px;
+  margin-bottom: 5px;
+  border-radius: 50%;
+  border-width: 1px;
+  border-color: rgb(255, 0, 157);
+  align-self: center;
+  align-content: center;
+  text-align: center;
+  align-items: center;
+}
+
+a {
+  padding: 10px;
+  color: rgb(9, 9, 37);
+  background-color: rgb(219, 24, 144);
+  border-color: rgb(240, 186, 219);
+
+  text-decoration: none;
+  cursor: pointer;
+}
+
+/*
+.cart-container {
+  margin: 20px;
+}
+
+.card-cart {
+  display: flex;
+  flex-direction: row;
+  border-style: solid;
+  border-width: 2px;
+  border-color: rgb(211, 211, 211);
+  border-radius: 10px;
+  max-width: 500px;
+}
+
+.card-img-left {
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+}
+
+
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
@@ -35,4 +150,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+}*/
