--- a/src/App.css
+++ b/src/App.css
@@ -37,10 +37,7 @@ body {
 
 .all-finalists {
   display: flex;
-  margin: 50px;
-  align-items: center;
-  align-self: center;
-  align-content: center;
+  margin-left: 55px;
 }
 
 .card {
@@ -50,8 +47,7 @@ body {
   border-top-left-radius: 50%;
 
   max-width: 500px;
-  background-color: rgb(189, 52, 136);
-
+  background-color: rgb(219, 24, 144)
 }
 
 .card-img-top {
@@ -62,6 +58,7 @@ body {
 }
 
 .card-body {
+  color: rgb(9, 9, 37);
   border-top-left-radius: 50%;
   border-top-right-radius: 50%;
   margin: 10px;
@@ -88,6 +85,7 @@ body {
   align-content: center;
   text-align: center;
   align-items: center;
+  cursor: pointer;
 }
 
 a {
@@ -98,6 +96,11 @@ a {
 
   text-decoration: none;
   cursor: pointer;
+}
+
+h1 {
+  color: rgb(138, 17, 92);
+  margin-left: 510px;
 }
 
 /*
