--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,7 @@ body {
 }
 
 .votes-items {
+  background-color: rgb(9, 9, 37);
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -103,27 +104,33 @@ h1 {
   margin-left: 510px;
 }
 
-/*
-.cart-container {
+
+.votes-container {
   margin: 20px;
+  margin-left: 700px;
+
 }
 
-.card-cart {
+.votes-card {
   display: flex;
   flex-direction: row;
   border-style: solid;
-  border-width: 2px;
-  border-color: rgb(211, 211, 211);
-  border-radius: 10px;
-  max-width: 500px;
+  border-color: rgb(138, 17, 92);
+  color: rgb(255, 108, 194);
+  border-top-left-radius: 50%;
+  border-bottom-left-radius: 50%;
+  max-width: 700px;
+  background-color: rgb(138, 17, 92);
 }
 
 .card-img-left {
-  border-top-left-radius: 10px;
-  border-bottom-left-radius: 10px;
+  width: 400px;
+  height: 400px;
+  border-top-left-radius: 50%;
+  border-bottom-left-radius: 50%;
 }
 
-
+/*
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
